--- a/index.html
+++ b/index.html
@@ -2,11 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/mean.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
 <body>
+    <header class="header">
+        <div class="conteiner">
+            <div class="header__inner">
+                <div class="user">
+                    <div class="user__avatar">
+                        <img src="images/intro.jpeg" alt="avatar">
+                    </div>
+                    <div class="user__content">
+                        <div class="user__name">Dmytro <br> Kurinnyi</div>
+                        <div class="user__prof">Fulstack Python Dev</div>
+                    </div>
+                </div>
+                <nav class="nav">
+                    <a href="#" class="nav__link">work</a>
+                    <a href="#" class="nav__link">about me</a>
+                    <a href="#" class="nav__link">blog</a>
+                    <a href="#" class="nav__link">contact</a>
+                    <a href="#" class="nav__link nav__link--btn">hire me</a>
+                </nav>
+
+            </div>
+
+        </div>
+    </header>
     
 </body>
 </html>
