add intro block and stile

--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/mean.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
 <body>
+
+
+    <!--header-->
     <header class="header">
         <div class="conteiner">
             <div class="header__inner">
@@ -33,6 +36,37 @@
 
         </div>
     </header>
+
+    <!--inrto-->
+    <div class="intro">
+        <div class="conteiner">
+            <div class="intro__inner">
+                <div class="intro__content">
+                    <h2 class="intro__subtittle">Hello i'm</h2>
+                    <h1 class="intro__tittle">Dmyrto Kurinnyi</h1>
+                    <div class="intro__prof">Fulstack Python Dev</div>
+                    <div class="social">
+                        <a href="#" class="social__link">
+                            <img class="social__img" src="images/1775160_facebook_chat_icon.svg" alt="">
+                        </a>
+                        <a href="#" class="social__link">
+                            <img class="social__img" src="images/317725_linkedin_social_icon.svg" alt="">
+                        </a>
+                        <a href="#" class="social__link">
+                            <img class="social__img" src="images/317738_instagram_photography_photos_icon.svg" alt="">
+                        </a>
+                        <a href="#" class="social__link">
+                            <img class="social__img" src="images/4745725_code_development_github_open-source_programming_icon.svg" alt="">
+                        </a>
+
+                    </div>
+                    <a href="#" class="btn">hier me</a>
+                    <button class="btn" type="button">see me resume</button>
+                </div>
+                <img src="images/intro.jpeg" alt="" class="intro__photo">
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
