add work blok and stille fo this blok

--- a/index.html
+++ b/index.html
@@ -67,6 +67,61 @@
             </div>
         </div>
     </div>
+
+
+    <!--works-->
+    <div class="works">
+        <div class="conteiner">
+            <div class="works__nav">
+                <a href="#" class="works__nav-link">all</a>
+                <a href="#" class="works__nav-link">App</a>
+                <a href="#" class="works__nav-link">Websites</a>
+                <a href="#" class="works__nav-link">interection</a>
+            </div>
+            <div class="portfolio">
+                <div class="portfolio__col">
+                    <div class="work">
+                        <img class="work__img" src="images/Obszar-roboczy-1-370x300.jpg" alt="">
+                        <div class="work__content">
+                            <div class="work__cat">category</div>
+                            <div class="work__tittle">
+                                Project tittle
+                                <div class="work__date">2020</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio__col">
+                    <div class="work">
+                        <img class="work__img" src="images/Obszar-roboczy-1-370x300.jpg" alt="">
+                        <div class="work__content">
+                            <div class="work__cat">category</div>
+                            <div class="work__tittle">
+                                Project tittle
+                                <div class="work__date">2020</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio__col">
+                    <div class="work">
+                        <img class="work__img" src="images/Obszar-roboczy-1-370x300.jpg" alt="">
+                        <div class="work__content">
+                            <div class="work__cat">category</div>
+                            <div class="work__tittle">
+                                Project tittle
+                                <div class="work__date">2020</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="text-centr">
+               <a href="#" class="btn btn--sm">load more work</a>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
