add module window

--- a/index.html
+++ b/index.html
@@ -192,6 +192,45 @@
 
         </div>
     </footer>
+
+
+    <!--modals-->
+    <div class="modal">
+        <div class="modal__dialog">
+            <button class="model__close" type="button">
+                <img src="images/close.svg" alt="" width="34px" height="34px">
+            </button>
+            <div class="modal-work">
+                <div class="modal-work__preview">
+                    <img src="images/Obszar-roboczy-1-800x800.jpg" alt="" class="modal-work__photo">
+                </div>
+                <div class="modal-work__content">
+                    <div class="modal-work__header">
+                        <h3 class="modal-work__tittle">Project tittle</h3>
+                        <div class="modal-work__info">
+                            category   <span class="modal-work__info-divider">|</span>   2021
+                        </div>
+                    </div>
+                    <div class="modal-work__text">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo, iusto saepe. Iusto quae aspernatur quam excepturi voluptates aut similique perferendis sint ipsa aliquid facere eligendi id quisquam, non ducimus officiis!
+                        </p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo, iusto saepe. Iusto quae aspernatur quam excepturi voluptates aut similique perferendis sint ipsa aliquid facere eligendi id quisquam, non ducimus officiis!
+                        </p>
+                    </div>
+                    <div class="model-work__footer">
+                        <button class="model-work__btn" type="button">
+                            <img src="images/left.svg" alt="" height="11">
+                           Privios</button>
+                        <button class="model-work__btn" type="button">Next
+                            <img src="images/rigth.svg" alt="" height="11">
+                        </button>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
     
 </body>
 </html>
