--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
 
     <!--inrto-->
-    <div class="intro">
+    <div class="intro" id = "contact">
         <div class="conteiner">
             <div class="intro__inner">
                 <div class="intro__content">
@@ -185,10 +185,10 @@
                 </div>
 
                 <nav class="footer__nav">
-                    <a href="#" class="footer__nav-link">work</a>
-                    <a href="#" class="footer__nav-link">about me</a>
+                    <a href="#works" class="footer__nav-link">work</a>
+                    <a href="#about" class="footer__nav-link">about me</a>
                     <a href="#" class="footer__nav-link">blog</a>
-                    <a href="#" class="footer__nav-link">contact</a>
+                    <a href="#contact" class="footer__nav-link">contact</a>
                     <a href="#" class="footer__nav-link footer__nav-link--btn" data-modal="#modal_hire_me" >hire me</a>
                 </nav>
             </div>
@@ -199,13 +199,17 @@
 
     <!--modals-->
     <div class="modal" id="modal_prodject_1">
-        <div class="modal__dialog">
+        <div class="modal__dialog" id="modal-work">
             <button class="model__close" type="button" data-close>
                 <img src="images/close.svg" alt="" width="34px" height="34px">
             </button>
             <div class="modal-work">
                 <div class="modal-work__preview">
-                    <img src="images/Obszar-roboczy-1-800x800.jpg" alt="" class="modal-work__photo">
+                    <div class="modal-work__photo">
+                       <img src="images/Obszar-roboczy-1-800x800.jpg" alt="" >
+                       <img src="images/slidfer/89035714_855184464948584_5061089436113043456_n.jpg" alt="">
+                       <img src="images/slidfer/IMG_1958.jpeg" alt="">
+                    </div>
                 </div>
                 <div class="modal-work__content">
                     <div class="modal-work__header">
@@ -217,14 +221,13 @@
                     <div class="modal-work__text">
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo, iusto saepe. Iusto quae aspernatur quam excepturi voluptates aut similique perferendis sint ipsa aliquid facere eligendi id quisquam, non ducimus officiis!
                         </p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo, iusto saepe. Iusto quae aspernatur quam excepturi voluptates aut similique perferendis sint ipsa aliquid facere eligendi id quisquam, non ducimus officiis!
-                        </p>
+                        
                     </div>
                     <div class="model-work__footer">
-                        <button class="model-work__btn" type="button">
+                        <button class="model-work__btn btnleft" type="button">
                             <img src="images/left.svg" alt="" height="11">
                            Privios</button>
-                        <button class="model-work__btn" type="button">Next
+                        <button class="model-work__btn btnright" type="button">Next
                             <img src="images/rigth.svg" alt="" height="11">
                         </button>
                     </div>
@@ -394,6 +397,7 @@
         <!--JS-->
         <script src="js/app.js"></script>
         <script src="js/skroll.js"></script>
+        <script src="js/slider.js"></script>
     
 </body>
 </html>
